--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitae</title>
+
+    <!-- link Stylesheet -->
+    <link rel="stylesheet" href="./assests/css/styles.css">
+    
+    <!-- link javascript -->
+    <script src="./assests/js/scripts.js" type="text/javascript"></script>
+
 </head>
 <body>
     
