--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <link rel="stylesheet" href="./module/bootstrap-5.0.2/css/bootstrap.min.css">
     <script src="./module/bootstrap-5.0.2/js/bootstrap.min.js" type="text/javascript"></script>
 
+    <!-- link FontAwesome CSS and JS-->
+    <link rel="stylesheet" href="./module/fontawesome-free-6.2.1-web/css/all.min.css">
+    <script src="./module/fontawesome-free-6.2.1-web/js/all.min.js" type="text/javascript"></script>
 
 </head>
 <body>
     
-    <div class="container">
-        <h2>hello</h2>
-    </div>
 
 </body>
 </html>
